Update Discord Bot
- Added Constant file.

--- a/Discord_rAthenaBot/Discord_rAthenaBot.csproj
+++ b/Discord_rAthenaBot/Discord_rAthenaBot.csproj
@@ -108,6 +108,7 @@
   <ItemGroup>
     <Compile Include="Config\Configuration.cs" />
     <Compile Include="Config\RSSConfiguration.cs" />
+    <Compile Include="Const\rss.cs" />
     <Compile Include="DivinePride\DivinePrideService.cs" />
     <Compile Include="DivinePride\Item.cs" />
     <Compile Include="DivinePride\Item.p.cs" />
