Update Discord Bot
- Updated References.
- Added Command: /akkarin

--- a/Discord_rAthenaBot/Discord_rAthenaBot.csproj
+++ b/Discord_rAthenaBot/Discord_rAthenaBot.csproj
@@ -145,6 +145,9 @@
     <Content Include="img\aleos.gif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="img\akkarin.gif">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="img\emistry.gif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
