Fix channel name
- general channel has been renamed to 'off-topic'.

--- a/Discord_rAthenaBot/config.json
+++ b/Discord_rAthenaBot/config.json
@@ -5,7 +5,7 @@
     "PrefixChar": "/",
     "AllowMentionPrefix": true,
     "Channels": {
-        "General": "general",
+        "General": "off-topic",
         "Support": "support",
         "Rules": "rules",
         "ServerAds": "server-ads"
