--- a/Discord_rAthenaBot/config.json
+++ b/Discord_rAthenaBot/config.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConsoleTitle": "Discord Bot - rAthena (2016)",
-    "DiscordToken": "MjQzNzYwNDgyMjgyODk3NDA4.CwojkA.JqTcw0h6njjoVc05GZlPaRnOxy8",
+    "DiscordToken": "",
     "ServerName": "rAthena",
     "PrefixChar": "/",
     "AllowMentionPrefix": true,
@@ -10,6 +10,6 @@
         "Rules": "rules",
         "ServerAds": "server-ads"
     },
-    "DivinePrideApiKey": "89fa90907f8749f1ffecdc47e9ec563e",
+    "DivinePrideApiKey": "",
     "DivinePrideBaseUrl": "http://www.divine-pride.net/api/database/{1}/{2}?apiKey={0}"
 }
